# communis-api

./: LICENSE  README.md  communis-api.cabal  stack.yaml
.stack-work/install/x86_64-linux/lts-3.10/7.10.2/flag-cache/: MonadRandom-0.4-717981f97c131172ca48ced0b7debe29  aeson-0.8.0.2-04fa3d540837e0728d9ed6fa196742da  aeson-extra-0.2.1.0-a806c2a0417ae742c23789f0699e3474  aeson-pretty-0.7.2-aa88da06960198f8e20b3c0b7195eb89  ansi-terminal-0.6.2.3-f6781f0f2767df49990dd6b9a0469daa  appar-0.1.4-eefe33bc58789b613508bd6fca2dd2d8  attoparsec-0.12.1.6-4d73464434a5f4c61543f80f17ea1962  auto-update-0.1.2.2-082ccf928dc1747301e11c3fe47c54fa  base-unicode-symbols-0.2.2.4-471ca69e30a453912a35c50240bd05b7  base64-bytestring-1.0.0.1-813fd6740a5a52ebe93ba173dbdc266e  blaze-builder-0.4.0.1-dbd2c683440ddafb55e513546e02fc25  blaze-html-0.8.1.1-208b16df3c7b8e9cbda008beca47a891  blaze-markup-0.7.0.3-9c0b1e27aa09dbecef107351523f5b8c  blaze-textual-0.2.1.0-1bfb62a8e0a9b10b84884d29fe52ecf3  bson-0.3.1-c2441fde140903768bee52bf7dc35ddc  byteable-0.1.1-9e873c18965555f56eacd6eafe98c9d1  byteorder-1.0.4-00c4ccc9385590a336e825a8bdbf3c4e  bytestring-builder-0.10.6.0.0-3ca5cbcec233c17da785d5f27705643c  bytestring-conversion-0.3.1-e67e19e1062b9ef9c6e0002214893165  case-insensitive-1.2.0.5-9190b49c8c820b4ab92ec73fd3445e63  cgi-3001.2.2.2-66f2bfd7ab24d2fe4143dac331e770a6  cmdargs-0.10.13-c739344a18b2d91754e0659e4025a347  communis-api-0.1.0.0  conduit-1.2.5-469b6333c3cdeb63cbc8873202c31e15  conduit-extra-1.1.9.1-bc586e388dfcf4ba67af837b5f491657  (+82 more)
src/: App.hs  Database.hs  Main.hs  Model.hs  Mongo.hs
(+2 files in other folders)
