name:                communis-api
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/communis-api#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable communis-api
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.8.1.0 && < 5,
                       persistent-template,
                       persistent-postgresql,
                       persistent,
                       monad-logger,
                       transformers,
                       time,
                       resourcet,
                       scotty,
                       aeson,
                       text,
                       safe,
                       email-validate,
                       esqueleto